--- a/music.html
+++ b/music.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First Website</title>
+    <title>Music</title>
   </head>
   <body>
-    <h1>About Me</h1>
-    <a href="music.html">Music</a>
+    <a href="index.html">Homepage</a>
   </body>
 </html>
