--- a/music.html
+++ b/music.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music</title>
+
+    <link rel="stylesheet" type="text/css" href="css/music.css" />
   </head>
   <body>
+    <h1>My Top 5 Favorite Songs</h1>
+
     <a href="index.html">Homepage</a>
   </body>
 </html>
