Added list of songs and an image to new page

--- a/music.html
+++ b/music.html
@@ -9,8 +9,36 @@
     <link rel="stylesheet" type="text/css" href="css/music.css" />
   </head>
   <body>
-    <h1>My Top 5 Favorite Songs</h1>
+    <h1>My Favorite Songs Right Now</h1>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=9Gj47G2e1Jc" target="_blank">
+          Mariya Takeuchi - Plastic Love
+        </a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=IluRBvnYMoY" target="_blank">
+          Daft Punk - Give Life Back to Music
+        </a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=lCRZ_jq4ueA" target="_blank">
+          Demon Slayer: Tengen Vs Gyutaro Fight Theme
+        </a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=nn3-rX7WHPo" target="_blank">
+          Mariya Takeuchi - Yume no Tsuzuki
+        </a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=6C4VR81GDtM" target="_blank">
+          Junko Ohashi - Sweet Love
+        </a>
+      </li>
+    </ul>
 
-    <a href="index.html">Homepage</a>
+    <img src="images/music_notes.jpg" alt="Headphones" />
+    <a class="home" href="index.html">Homepage</a>
   </body>
 </html>
