--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>About Me</h1>
+    <img src="images/angrytrain.jpg" alt="Angry ChooChoo Train" />
     <a href="music.html">Music</a>
   </body>
 </html>
