Added a third page with its own css stylesheet

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <h1>About Me</h1>
     <img src="images/angrytrain.jpg" alt="Angry ChooChoo Train" />
     <a href="music.html">Music</a>
+    <br />
+    <a href="foods.html">Foods</a>
+    <br />
   </body>
 </html>
