Added images of my favorite foods

--- a/foods.html
+++ b/foods.html
@@ -11,6 +11,24 @@
   <body>
     <h1>My Favorite Foods</h1>
 
+    <h2>Burgers and Fries</h2>
+    <img src="images/burgers.jpg" alt="Burgers and Fries Image" />
+
+    <h2>Pupusas</h2>
+    <img src="images/pupusas.jpg" alt="Pupusas Image" />
+
+    <h2>Tamales de Elote</h2>
+    <img src="images/tamales_de_elote.jpg" alt="Tamales de Elote Image" />
+
+    <h2>Tres Leches Cake</h2>
+    <img src="images/cake.jpg" alt="Piece of cake image" />
+
+    <h2>Traditional Mexican Hot Chocolate with Sweet Conchas</h2>
+    <img
+      src="images/mexican_hot_chocolate.jpg"
+      alt="Image of hot chocolate and conchas"
+    />
+
     <a class="home" href="index.html">Homepage</a>
   </body>
 </html>
