--- a/shows.html
+++ b/shows.html
@@ -10,6 +10,11 @@
   </head>
   <body>
     <h1>My favorite Shows Right Now</h1>
+
+    <img src="images/demon slayer.jpeg" alt="Demon Slayer" />
+    <img src="images/attack on titan.png" alt="Attack on Titan" />
+    <img src="images/rick and morty.jpg" alt="Rick and Morty" />
+    <img src="images/the simpsons.jpg" alt="The Simpsons" />
     <a class="home" href="index.html">Homepage</a>
   </body>
 </html>
