--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
     <h1>About Me</h1>
     <img src="images/angrytrain.jpg" alt="Angry ChooChoo Train" />
+    <a href="jorge.html">Jorge</a>
+    <br />
+    <br />
     <a href="music.html">Music</a>
     <br />
     <br />
